docs: update project documentation and codebase map